# tauri-plugin-graphql

./: .eslintrc.json  .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  rustfmt.toml
.changes/: adjust-dependency-version.md  bump-urql-client.md  chore-update-deps.md  config.json  feat-add-subscriptions.md  feat-graphiql.md  fix-bundle.md  fix-readme.md  fix-remove-panics.md  fix-update-readme.md  initial-release.md  mark-as-stable.md  re-export-async-gql.md  readme.md  refactor-rename-exchange.md  switch-to-async-graphql.md  update-async-graphql.md  update-deps.md  update-docs.md  update-tauri-api.md  update-tauri.md
.github/workflows/: audit-javascript.yml  audit.yml  covector-status.yml  covector-version-or-publish.yml  format-javascript.yml  format.yml  lint-javascript.yml  lint.yml  test.yml
examples/preact-app/: package.json
examples/preact-app/src/: app.tsx  main.tsx
examples/preact-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/preact-app/src-tauri/src/: main.rs
src/: lib.rs
