[package]
name = "tauri-plugin-graphql"
version = "0.1.0"
authors = [ "Jonas Kruckenberg" ]
description = "A plugin for Tauri that enables type-safe IPC through GraphQL."
edition = "2021"
rust-version = "1.59"
exclude = [ "/webview-dist", "/webview-src", "node_modules" ]
license = "MIT"
repository = "https://github.com/JonasKruckenberg/tauri-plugin-graphql"
categories = [ "gui", "web-programming" ]
keywords = [ "tauri-plugin", "graphql" ]

[dependencies]
juniper = { version = "0.15.9", default-features = false }
juniper_subscriptions = { version = "0.16.0", optional = true }
serde = { version = "1.0.136", features = ["derive"], optional = true }
serde_json = "1.0.79"
tauri = { version = "1.0.0-rc.6" }

[features]
url = [ "juniper/url" ]
uuid = [ "juniper/uuid" ]
subscriptions = ["juniper_subscriptions", "serde"]