[package]
name = "tauri-plugin-graphql"
version = "0.2.1"
authors = [ "Jonas Kruckenberg" ]
description = "A plugin for Tauri that enables type-safe IPC through GraphQL."
edition = "2021"
rust-version = "1.59"
exclude = [ "/webview-dist", "/webview-src", "node_modules" ]
license = "MIT"
repository = "https://github.com/JonasKruckenberg/tauri-plugin-graphql"
categories = [ "gui", "web-programming" ]
keywords = [ "tauri-plugin", "graphql" ]

[dependencies]
juniper = { version = "0.15.9", default-features = false }
juniper_subscriptions = { version = "0.16.0", optional = true }
serde = { version = "1.0.137", features = [ "derive" ], optional = true }
serde_json = "1.0.81"
tauri = { version = "1.0.0-rc.10" }

[features]
url = [ "juniper/url" ]
uuid = [ "juniper/uuid" ]
subscriptions = [ "juniper_subscriptions", "serde" ]

[dev-dependencies]
rand = "0.8.5"

[package.metadata.docs.rs]
features = ["subscriptions"]